<resources>
    <string name="app_name">Christmas Countdown Deluxw</string>
    <string name="christmas">Merry Christmas!</string>
    <string name="christmasEve">It\'s Christmas Eve\!</string>
    <string name="countdown">Days till Christmas</string>
    <string name="days">Days</string>
    <string name="christmasbellimage">christmas bell image</string>
    <string name="privacy"><a href="https://docs.google.com/document/d/1njc2PRTB-AojqK51gng3SA3ap1QnZMpzZ5qTAqhTjEI/edit?usp=sharing">Privacy Policy</a></string>
    <string name="wallpapers">Wallpapers</string>
    <string name="theme_music">Theme Music</string>
    <string name="music_christmas_tree">O Christmas Tree</string>
    <string name="music_deck_halls">Deck the Halls</string>
    <string name="music_holy_night">O Holy Night</string>
    <string name="music_jingle_bells">Jingle Bells</string>
    <string name="music_merry_christmas">We Wish You A Merry Christmas</string>
    <string name="music_silent_night">Silent Night</string>
    <string name="music_none">No Music</string>
    <string name="wall_red_tree">Red Christmas Tree</string>
    <string name="wall_blue_tree">Blue Christmas Tree</string>
    <string name="red_wall">Red</string>
    <string name="blue_wall">Blue</string>
    <string name="green_wall">Green</string>
    <string name="peach_wall">Peach</string>
    <string name="black_wall">Black</string>
    <string name="grey_wall">Grey</string>
    <string name="wallpapers_menu_title">Background Colors</string>
    <string name="decorations">Decorations</string>
    <string name="christmas_bells">Christmas Bells</string>
    <string name="jingle_bells">Christmas Bells</string>
    <string name="christmas_tree">Christmas Tree</string>
    <string name="sleigh_bells">Santa\'s Sleigh</string>
    <string name="decoration_image">Decoration Image</string>
    <string name="music_holly_jolly">Holly Jolly Christmas</string>
    <string name="music_frosty_snowman">Frosty the Snowman</string>
    <string name="cocoa_mug">Christmas Cocoa</string>
    <string name="music_rockin_tree">Rockin\' Around the Christmas Tree</string>
    <string name="jingle_bell_rock">Jingle Bell Rock</string>
    <string name="snowman">Frosty Snowman</string>
    <string name="music_joy_world">Joy to the World</string>
    <string name="north_star">Christmas Star</string>
    <string name="font_change">Change Font</string>
    <string name="font_home_christmas">Home For Christmas</string>
    <string name="font_heavenly_christmas">A Heavenly Christmas</string>
    <string name="font_merrychristmasflake">Merry Christmas Snowflake</string>
    <string name="font_christmas_joy">Christmas Joy</string>
    <string name="font_christmas_spirit">Christmas Spirit</string>
    <string name="font_winter_festival">Winter Festival</string>
    <string name="font_evening_snow">Evening Snow</string>
    <string name="font_christmas_eve">Christmas Eve</string>
    <string name="font_snow_fall">Snowfall</string>
    <string name="font_starry_night">Starry Night</string>

</resources>


